log
Fri, May 16, 2025  9:48:45 PM: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|5
total_score: 0/70
3f0e54c
Fri, May 16, 2025  9:49:45 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
a06a73d
Fri, May 16, 2025  9:53:15 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
90829d7
Fri, May 16, 2025 10:21:12 PM: 
 sudoku.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:54:35: error: comparison between pointer and integer [-Werror]
     if(n == NULL || n->sudo[0][0] == NULL) return list;
                                   ^~
cc1.exe: all warnings being treated as errors
75e6c0b
Fri, May 16, 2025 10:21:28 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d04812f
Fri, May 16, 2025 10:22:42 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2bd69c6
Fri, May 16, 2025 10:31:36 PM: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
3da753e
